ID:8178 Fix tooltip behind select dropdown
id: 8178

--- a/dev/sass/qwiki/_tooltip.scss
+++ b/dev/sass/qwiki/_tooltip.scss
@@ -178,7 +178,6 @@ h3, label {
         z-index: $sidebar-z-index * 1.5;
     }
 }
-
-.sidebar .popover {
+.vue-sidebar .v-popover .popover {
     z-index: $sidebar-z-index * 1.5;
 }
